--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
-<link rel="icon" href="icc.png" type="image/x-icon" />
-<meta http-equiv="Refresh" content="0;url=https://pixaloj.github.io/PixalOJ-Hydrogen" />
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Bashu OnlineJudge NG</title>
+  <link href="https://fonts.googleapis.com/css?family=Alatsi&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<div class="container">
+  <span class="title">Bashu OnlineJudge NG</span>
+</div>
+<!-- partial -->
+  <script  src="./script.js"></script>
+<meta http-equiv="Refresh" content="3;url=https://pixaloj.github.io/PixalOJ-Hydrogen" />
+</body>
+</html>
