--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 </div>
 <!-- partial -->
   <script  src="./script.js"></script>
-<meta http-equiv="Refresh" content="3;url=https://pixaloj.github.io/PixalOJ-Hydrogen" />
+<meta http-equiv="Refresh" content="3;url=https://pixaloj.github.io/bsoj-ng-px4" />
 </body>
 </html>
