--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </div>
 <!-- partial -->
   <script  src="./script.js"></script>
-<meta http-equiv="Refresh" content="3;url=https://pixaloj.github.io/bsoj-ng-px4" />
+
 </body>
 </html>
+
+<meta http-equiv="Refresh" content="3;url=https://8c1e-27-10-133-245.ngrok.io/" />
