--- a/index.html
+++ b/index.html
@@ -17,4 +17,4 @@
 </body>
 </html>
 
-<meta http-equiv="Refresh" content="3;url=https://8c1e-27-10-133-245.ngrok.io/" />
+<meta http-equiv="Refresh" content="3;url=https://1d47-27-10-133-245.ngrok.io/" />
