--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Bashu OnlineJudge NG</title>
-  <link href="https://fonts.googleapis.com/css?family=Alatsi&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<div class="container">
-  <span class="title">Bashu OnlineJudge NG</span>
-</div>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
-</html>
-
-<meta http-equiv="Refresh" content="3;url=https://1d47-27-10-133-245.ngrok.io/" />
+<meta http-equiv="Refresh" content="0;url=https://1593-27-10-133-245.ngrok.io/" />
