--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0;url=https://b74d-27-10-133-245.ngrok.io/" />
+<meta http-equiv="Refresh" content="0;url=https://27.11.162.95/" />
