--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0;url=https://27.11.162.95/" />
+<meta http-equiv="Refresh" content="0;url=http://27.11.162.95/" />
