--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-域名已经切换到bsoj.wczo.cn
-<meta http-equiv="Refresh" content="3;url=http://bsoj.wczo.cn/" />
+域名已经切换到bsoj.nuser.ga
+<meta http-equiv="Refresh" content="3;url=http://bsoj.nuser.ga/" />
