--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-域名已经切换到bsoj.nuser.ga
-<meta http-equiv="Refresh" content="3;url=http://bsoj.nuser.ga/" />
+
+<meta http-equiv="Refresh" content="0;url=http://27.10.10.78:8888/" />
