--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-
-<meta http-equiv="Refresh" content="0;url=http://27.10.10.78:8888/" />
+<title>首页 - OneOJ</title>
+<meta http-equiv="Refresh" content="0;url=http://27.10.10.78:1234/" />
